--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,6 @@
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.3",
-    "@paralleldrive/cuid2": "^2.2.2",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "0.0.12",
     "adminjs": "^5.11.0",
@@ -58,6 +57,7 @@
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "express": "^4.18.3",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.0",
@@ -76,7 +76,6 @@
     "react-email": "^2.1.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "simple-git": "^3.22.0",
     "socket.io": "^4.7.4",
     "tslib": "^2.6.2",
     "typeorm": "^0.3.20",
@@ -91,6 +90,8 @@
     "@swc/cli": "^0.3.10",
     "@swc/core": "^1.4.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/dockerode": "^3.3.26",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
