--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "typescript": "^5.4.2"
-  }
+  },
+  "workspaces": ["frontend", "backend", "whatsapp-node"]
 }
