--- a/whatsapp-node/Dockerfile
+++ b/whatsapp-node/Dockerfile
@@ -4,15 +4,16 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 ENV DISABLE_HUSKY="true"
 RUN corepack enable
+RUN apk add git
 
 COPY . /app
 WORKDIR /app
 
 FROM base AS prod-deps
-RUN pnpm install --prod --frozen-lockfile
+RUN pnpm install --prod --no-frozen-lockfile
 
 FROM base AS build
-RUN NODE_ENV=development pnpm install --frozen-lockfile
+RUN NODE_ENV=development pnpm install --no-frozen-lockfile
 RUN pnpm run build
 
 FROM base
