--- a/compose.yaml
+++ b/compose.yaml
@@ -26,6 +26,15 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
 
+  migrate:
+    build:
+      context: ./backend
+    depends_on:
+      - db
+    command: ["sh", "-c", "node ./node_modules/typeorm/cli -d ./dist/ormconfig.js migration:run"]
+    env_file:
+      - .env
+
   redis:
     image: redis:alpine
     command: redis-server --requirepass "${REDIS_PASSWORD}"
@@ -112,7 +121,6 @@ services:
         mc admin user add minio ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY}
         mc admin policy attach minio readwrite --user ${MINIO_ACCESS_KEY}
         mc mb minio/zapdiviser
-        mc anonymous set download minio/zapdiviser
 
 networks:
   caddy:
@@ -121,6 +129,7 @@ networks:
 
 volumes:
   caddy_data:
+  portainer:
   redis:
   postgres:
   registry:
