--- a/compose.yaml
+++ b/compose.yaml
@@ -37,7 +37,8 @@ services:
 
   redis:
     image: redis:alpine
-    command: redis-server --requirepass "${REDIS_PASSWORD}"
+    restart: always
+    command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
     ports:
       - "6379:6379"
     volumes:
@@ -118,8 +119,7 @@ services:
         done
 
         mc alias set minio http://minio:9000 ${MINIO_USER} ${MINIO_PASSWORD}
-        mc admin user add minio ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY}
-        mc admin policy attach minio readwrite --user ${MINIO_ACCESS_KEY}
+        mc admin user svcacct add minio ${MINIO_USER} --access-key ${MINIO_ACCESS_KEY} --secret-key ${MINIO_SECRET_KEY}
         mc mb minio/zapdiviser
 
 networks:
