--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,8 @@ services:
 
   db:
     image: postgres:alpine
+    networks:
+      - local
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
