--- a/compose.yaml
+++ b/compose.yaml
@@ -40,6 +40,8 @@ services:
   redis:
     image: redis:alpine
     restart: always
+    networks:
+      - local
     command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
     ports:
       - "6379:6379"
