--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,9 +16,9 @@ RUN pnpm run build
 
 FROM base
 
-COPY --from=prod-deps /app/node_modules /app/node_modules
 COPY --from=build /app/dist /app/dist
+RUN pnpm i -g serve
 
 EXPOSE 8080
 
-CMD ["pnpm", "start"]
+CMD ["serve", "dist"]
