--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,6 +2,8 @@ services:
   frontend:
     build:
       context: ./frontend
+    volumes:
+      - - /var/run/docker.sock:/var/run/docker.sock
     expose:
       - 3000:3000
     networks:
