--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -31,11 +31,21 @@ services:
       - db
       - redis
       - minio
-    env_file:
-      - path: .env
-        required: false
-      - path: stack.env
-        redirect: false
+    environment:
+      HOST: ${HOST}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${zapdiviser}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_URL: ${REDIS_URL}
+      MINIO_USER: ${MINIO_USER}
+      MINIO_PASSWORD: ${MINIO_PASSWORD}
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      JWT_SECRET: ${JWT_SECRET}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
