--- a/compose.yaml
+++ b/compose.yaml
@@ -36,11 +36,12 @@ services:
     networks:
       - local
     command: ["sh", "-c", "node ./node_modules/typeorm/cli -d ./dist/ormconfig.js migration:run"]
-    env_file:
-      - path: .env
-        required: false
-      - path: stack.env
-        redirect: false
+    environment:
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${zapdiviser}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
   redis:
     image: redis:alpine
