--- a/compose.yaml
+++ b/compose.yaml
@@ -40,7 +40,7 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${zapdiviser}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
   redis:
@@ -53,39 +53,6 @@ services:
       - "6379:6379"
     volumes:
       - redis:/data
-
-  registry:
-    image: registry
-    ports:
-      - "5000:5000"
-    networks:
-      - caddy
-    environment:
-      REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY: /data
-    volumes:
-      - registry:/data
-    labels:
-      caddy: "registry.zapdiviser.localhost"
-      caddy.tls: "internal"
-      caddy.reverse_proxy: "{{upstreams 5000}}"
-    deploy:
-      labels:
-        caddy: "registry.zapdiviser.localhost"
-        caddy.tls: "internal"
-        caddy.reverse_proxy: "{{upstreams 5000}}"
-
-  setup-whatsapp-node-image:
-    image: docker:dind
-    depends_on:
-      - registry
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./whatsapp-node:/app
-    command: [
-      "sh",
-      "-c",
-      "docker build -t registry.zapdiviser.localhost/whatsapp /app && docker push registry.zapdiviser.localhost/whatsapp"
-    ]
 
   minio:
     image: minio/minio
@@ -107,12 +74,6 @@ services:
       caddy_0.reverse_proxy: "{{upstreams 9000}}"
       caddy_1: minio.${HOST}
       caddy_1.reverse_proxy: "{{upstreams 9001}}"
-    deploy:
-      labels:
-        caddy_0: minio-api.${HOST}
-        caddy_0.reverse_proxy: "{{upstreams 9000}}"
-        caddy_1: minio.${HOST}
-        caddy_1.reverse_proxy: "{{upstreams 9001}}"
 
   setup-minio:
     image: minio/mc
@@ -142,5 +103,4 @@ volumes:
   portainer:
   redis:
   postgres:
-  registry:
   minio:
