--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -12,8 +12,11 @@ services:
     environment:
       VITE_BACKEND_URL: backend.${HOST}
     labels:
-      caddy: ${HOST}, www.${HOST}
-      caddy.reverse_proxy: "{{upstreams 3000}}"
+      caddy_0: ${HOST}
+      caddy_0.reverse_proxy: "{{upstreams 3000}}"
+      caddy_1: www.${HOST}
+      caddy_1.redir: ${HOST}
+      caddy_1.tls: internal
 
   backend:
     build:
@@ -55,4 +58,5 @@ services:
       caddy_2.reverse_proxy: "{{upstreams 8000}}"
       caddy_3: admin.${HOST}
       caddy_3.rewrite: "* /admin-br{uri}"
+      caddy_3.redir: "/admin-br /"
       caddy_3.reverse_proxy: "{{upstreams 8000}}"
