--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -56,5 +56,6 @@ services:
       caddy_2.rewrite: "* /api/redirects{uri}"
       caddy_2.reverse_proxy: "{{upstreams 8000}}"
       caddy_3: admin.${HOST}
-      caddy_3.redir: "/{uri} /admin-br{uri}"
+      caddy_3.rewrite: "* /admin-br{uri}"
+      caddy_3.redir: "/admin-br* /{uri}"
       caddy_3.reverse_proxy: "{{upstreams 8000}}"
