--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,8 +2,9 @@ services:
   frontend:
     build:
       context: ./frontend
+    command: --brotli
     expose:
-      - 3000:3000
+      - 8000:8000
     networks:
       - local
       - caddy
@@ -13,7 +14,7 @@ services:
       VITE_BACKEND_URL: backend.${HOST}
     labels:
       caddy_0: ${HOST}
-      caddy_0.reverse_proxy: "{{upstreams 3000}}"
+      caddy_0.reverse_proxy: "{{upstreams 8000}}"
       caddy_1: www.${HOST}
       caddy_1.redir: https://${HOST}{uri}
 
