--- a/compose.yaml
+++ b/compose.yaml
@@ -1,30 +1,44 @@
 version: "3.9"
 
 services:
-  caddy:
-    image: lucaslorentz/caddy-docker-proxy:ci-alpine
+  traefik:
+    image: traefik
+    restart: unless-stopped
+    command:
+      - --entrypoints.web.address=:80
+      - --entrypoints.web.http.redirections.entryPoint.to=websecure
+      - --entrypoints.web.http.redirections.entryPoint.scheme=https
+      - --entrypoints.websecure.address=:443
+      - --providers.docker=true
+      - --providers.docker.exposedByDefault=false
+      - --api
+      - --certificatesresolvers.letsencryptresolver.acme.email=${EMAIL}
+      - --certificatesresolvers.letsencryptresolver.acme.storage=/acme.json
+      - --certificatesresolvers.letsencryptresolver.acme.tlschallenge=true
     ports:
       - 80:80
       - 443:443
-    environment:
-      - CADDY_INGRESS_NETWORKS=caddy
-    networks:
-      - caddy
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - caddy_data:/data
-    restart: unless-stopped
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ${TRAEFIK_DIR}/acme.json:/acme.json
+    labels:
+      - traefik.enable=true
+      - traefik.http.middlewares.admin.basicauth.users=${ADMIN_EMAIL}:${ADMIN_PASSWORD}
+      - traefik.http.routers.traefik.entrypoints=websecure
+      - traefik.http.routers.traefik.rule=Host(`traefik.${HOST}`)
+      - traefik.http.routers.traefik.service=api@internal
+      - traefik.http.routers.traefik.middlewares=admin
+      - traefik.http.routers.traefik.tls.certresolver=letsencryptresolver
 
   db:
     image: postgres:alpine
     networks:
-      - local
+      - internal
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5433:5432"
     volumes:
       - postgres:/var/lib/postgresql/data
 
@@ -34,7 +48,7 @@ services:
     depends_on:
       - db
     networks:
-      - local
+      - internal
     command: ["sh", "-c", "node ./node_modules/typeorm/cli -d ./dist/ormconfig.js migration:run"]
     environment:
       POSTGRES_HOST: ${POSTGRES_HOST}
@@ -47,40 +61,40 @@ services:
     image: redis:alpine
     restart: always
     networks:
-      - local
+      - internal
     command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
-    ports:
-      - "6379:6379"
     volumes:
       - redis:/data
 
   minio:
     image: minio/minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
     volumes:
       - "minio:/data"
     environment:
       MINIO_ROOT_USER: ${MINIO_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
     networks:
-      - local
-      - caddy
+      - internal
+      - traefik
     command: server /data --console-address :9001
     restart: unless-stopped
     labels:
-      caddy_0: minio-api.${HOST}
-      caddy_0.reverse_proxy: "{{upstreams 9000}}"
-      caddy_1: minio.${HOST}
-      caddy_1.reverse_proxy: "{{upstreams 9001}}"
+      traefik.enable: true
+
+      traefik.http.routers.minio-api.rule: Host(`minio-api.${HOST}`)
+      traefik.http.routers.minio-api.service: minio
+      traefik.http.services.minio-api.loadbalancer.server.port: 9000
+
+      traefik.http.routers.minio.rule: Host(`minio.${HOST}`)
+      traefik.http.routers.minio.service: minio-api
+      traefik.http.services.minio.loadbalancer.server.port: 9001
 
   setup-minio:
     image: minio/mc
     depends_on:
       - minio
     networks:
-      - local
+      - internal
     entrypoint:
       - sh
       - -c
@@ -94,13 +108,11 @@ services:
         mc mb minio/zapdiviser
 
 networks:
-  caddy:
+  traefik:
     external: true
-  local:
+  internal:
 
 volumes:
-  caddy_data:
-  portainer:
   redis:
   postgres:
   minio:
