--- a/compose.yaml
+++ b/compose.yaml
@@ -82,11 +82,11 @@ services:
       traefik.enable: true
 
       traefik.http.routers.minio-api.rule: Host(`minio-api.${HOST}`)
-      traefik.http.routers.minio-api.service: minio
+      traefik.http.routers.minio-api.service: noop@internal
       traefik.http.services.minio-api.loadbalancer.server.port: 9000
 
       traefik.http.routers.minio.rule: Host(`minio.${HOST}`)
-      traefik.http.routers.minio.service: minio-api
+      traefik.http.routers.minio.service: noop@internal
       traefik.http.services.minio.loadbalancer.server.port: 9001
 
   setup-minio:
