--- a/compose.yaml
+++ b/compose.yaml
@@ -44,6 +44,8 @@ services:
   redis:
     image: redis:alpine
     restart: always
+    ports:
+      - 6379:6379
     networks:
       - internal
     command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
