--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,14 @@
     "react": "^16.14.0"
   },
   "dependencies": {
-    "@adminjs/express": "^5.1.0",
-    "@adminjs/nestjs": "^5.1.1",
-    "@adminjs/passwords": "4.0.0-beta.2",
-    "@adminjs/typeorm": "^4.0.0",
-    "@bull-board/api": "^5.14.2",
-    "@bull-board/express": "^5.14.2",
-    "@bull-board/nestjs": "^5.14.2",
+    "@adminjs/express": "^6.1.0",
+    "@adminjs/logger": "^5.0.1",
+    "@adminjs/nestjs": "^6.1.0",
+    "@adminjs/passwords": "4.0.0",
+    "@adminjs/typeorm": "^5.0.1",
+    "@bull-board/api": "^5.15.1",
+    "@bull-board/express": "^5.15.1",
+    "@bull-board/nestjs": "^5.15.1",
     "@getbrevo/brevo": "2.0.0-beta.4",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/bull": "^10.1.0",
@@ -47,7 +48,7 @@
     "@nestjs/websockets": "^10.3.3",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "0.0.12",
-    "adminjs": "^5.11.0",
+    "adminjs": "^7.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bull": "^4.12.2",
@@ -61,7 +62,7 @@
     "express": "^4.18.3",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.0",
-    "inquirer": "^9.2.15",
+    "inquirer": "^9.2.16",
     "ioredis": "^5.3.2",
     "joi": "^17.12.2",
     "lodash": "^4.17.21",
@@ -80,15 +81,15 @@
     "tslib": "^2.6.2",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.0",
-    "typia": "^5.4.14"
+    "typia": "^5.5.4"
   },
   "devDependencies": {
-    "@nestia/sdk": "^2.5.12",
+    "@nestia/sdk": "^2.5.15",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.3",
     "@swc/cli": "^0.3.10",
-    "@swc/core": "^1.4.2",
+    "@swc/core": "^1.4.7",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.26",
@@ -96,11 +97,11 @@
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "^4.17.0",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.27",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.2.61",
+    "@types/react": "^18.2.65",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -109,7 +110,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "git-commit-msg-linter": "^5.0.6",
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
