--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -1,15 +1,5 @@
 services:
-  pgadmin:
-    image: dpage/pgadmin4
-    depends_on:
-      - db
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - 8081:80
-    volumes:
-      - pgadmin:/var/lib/pgadmin
-
-volumes:
-  pgadmin:
+  minio:
+    labels:
+      caddy_0.tls: "internal"
+      caddy_1.tls: "internal"
