--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,6 @@
     "menu": "ts-node ./src/common/commands/menu/index.ts",
     "create:database": "ts-node ./src/common/commands/create-database/index.ts"
   },
-  "resolutions": {
-    "gauge": "^3.0.0",
-    "react": "^16.14.0"
-  },
   "dependencies": {
     "@adminjs/express": "^6.1.0",
     "@adminjs/logger": "^5.0.1",
@@ -84,6 +80,7 @@
     "typia": "^5.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@nestia/sdk": "^2.5.15",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
