--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -11,10 +11,8 @@ services:
     environment:
       VITE_BACKEND_URL: backend.${HOST}
     labels:
-      caddy_0: ${HOST}
+      caddy_0: app.${HOST}
       caddy_0.reverse_proxy: "{{upstreams 8080}}"
-      caddy_1: www.${HOST}
-      caddy_1.redir: https://${HOST}{uri}
 
   backend:
     build:
