--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,4 +1,19 @@
 services:
+  migrate:
+    build:
+      context: ./backend
+    depends_on:
+      - db
+    networks:
+      - internal
+    command: ["sh", "-c", "node ./node_modules/typeorm/cli -d ./dist/ormconfig.js migration:run"]
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+
   frontend:
     build:
       context: ./frontend
