--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -28,6 +28,8 @@ services:
     labels:
       caddy_0: app.${HOST}
       caddy_0.reverse_proxy: "{{upstreams 8080}}"
+      caddy_1: ${HOST}
+      caddy_1.reverse_proxy: https://contingenciainfinita.com/zapdiviser/
 
   backend:
     build:
