--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -29,8 +29,8 @@ services:
       caddy_0: app.${HOST}
       caddy_0.reverse_proxy: "{{upstreams 8080}}"
       caddy_1: ${HOST}
-      caddy_1.rewrite: "* /zapdiviser{uri}"
       caddy_1.reverse_proxy: https://contingenciainfinita.com
+      caddy_1.reverse_proxy.rewrite: "* /zapdiviser{uri}"
 
   backend:
     build:
