--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -29,6 +29,8 @@ services:
       caddy_0: app.${HOST}
       caddy_0.reverse_proxy: "{{upstreams 8080}}"
       caddy_1: ${HOST}
+      caddy_1.rewrite: "* /zapdiviser{uri}"
+      caddy_1.reverse_proxy.header_up: "Host {http.reverse_proxy.upstream.hostport}"
       caddy_1.reverse_proxy: https://contingenciainfinita.com
 
   backend:
