--- a/backend/package.json
+++ b/backend/package.json
@@ -56,7 +56,6 @@
     "bullAdapter": "link:@bull-board/api/bullAdapter",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
@@ -69,11 +68,14 @@
     "lodash": "^4.17.21",
     "minio": "^7.1.3",
     "nestjs-minio": "^2.5.4",
+    "nestjs-pino": "^4.0.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "react": "^16.14.0",
     "react-email": "^2.1.0",
     "reflect-metadata": "^0.1.14",
