--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -135,6 +135,7 @@ services:
       - internal
 
   grafana:
+    image: grafana/grafana
     environment:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
@@ -158,7 +159,8 @@ services:
           editable: false
         EOF
         /run.sh
-    image: grafana/grafana:latest
+    volumes:
+      - grafana:/var/lib/grafana
     networks:
       - caddy
       - internal
@@ -173,3 +175,4 @@ networks:
 volumes:
   caddy_data:
   portainer:
+  grafana:
