--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "@react-email/render": "0.0.12",
     "adminjs": "^7.7.2",
     "bcrypt": "^5.1.1",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "bull": "^4.12.2",
     "bullAdapter": "link:@bull-board/api/bullAdapter",
@@ -66,15 +67,13 @@
     "joi": "^17.12.2",
     "lodash": "^4.17.21",
     "minio": "^7.1.3",
+    "nest-winston": "^1.9.4",
     "nestjs-minio": "^2.5.4",
-    "nestjs-pino": "^4.0.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
-    "pino-http": "^9.0.0",
-    "pino-pretty": "^11.0.0",
     "react": "^16.14.0",
     "react-email": "^2.1.0",
     "reflect-metadata": "^0.1.14",
@@ -83,7 +82,9 @@
     "tslib": "^2.6.2",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.0",
-    "typia": "^5.5.4"
+    "typia": "^5.5.4",
+    "winston": "^3.12.0",
+    "winston-loki": "^6.0.8"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -94,6 +95,7 @@
     "@swc/cli": "^0.3.10",
     "@swc/core": "^1.4.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/bluebird": "^3.5.42",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.26",
     "@types/dotenv": "^8.2.0",
