--- a/whatsapp-node/package.json
+++ b/whatsapp-node/package.json
@@ -19,7 +19,9 @@
     "ioredis": "^5.3.2",
     "minio": "^7.1.3",
     "node-cache": "^5.1.2",
-    "sucrase": "^3.35.0"
+    "sucrase": "^3.35.0",
+    "winston": "^3.12.0",
+    "winston-loki": "^6.0.8"
   },
   "devDependencies": {
     "dotenv": "^16.4.3",
