--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,6 @@
     "@bull-board/express": "^5.15.1",
     "@bull-board/nestjs": "^5.15.1",
     "@getbrevo/brevo": "2.0.0-beta.4",
-    "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/bull": "^10.1.0",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
@@ -69,6 +68,7 @@
     "minio": "^7.1.3",
     "nest-winston": "^1.9.4",
     "nestjs-minio": "^2.5.4",
+    "nestjs-redis-cluster": "^2.0.6",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
