--- a/whatsapp-node/Dockerfile
+++ b/whatsapp-node/Dockerfile
@@ -9,11 +9,11 @@ WORKDIR /app
 
 FROM base AS prod-deps
 COPY package.json ./
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --no-frozen-lockfile
 
 FROM base AS build
 COPY package.json ./
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --no-frozen-lockfile
 COPY . .
 RUN pnpm run build
 
